Complete post of course reviews

--- a/src/content/posts/2025-01-25-uoft-ece-upper-year-course-planning-tips/index.mdx
+++ b/src/content/posts/2025-01-25-uoft-ece-upper-year-course-planning-tips/index.mdx
@@ -23,13 +23,9 @@ I've taken a lot of courses from my time in UofT ECE (most of them were about so
   - 1st year ECE students and potential applicants trying to figure out what they can learn from their degree
 
 <Callout type="info" classes="border-grey-950/100 bg-grey-100 dark:border-grey-100/100 dark:bg-grey-950">
-  **Disclaimer:** I'm a software guy, which means that when it comes to ECE courses at UofT my interests lie solely in areas 6 (computer software) and 5 (computer hardware and computer networks). I've gone through almost all the area 6 courses and some of the area 5 courses so I can speak about them at length (along with some others), but if you're interested in more of the electrical and hardware side of things I strongly recommend reaching out to students who have taken those courses (on Discord, LinkedIn, on-campus) and learn from them firsthand about what they're like.
-</Callout>
-
-<Callout type="destructive">
-  **This page is currently still under construction!**
-
-  Check back on January 29 for any incomplete course reviews.
+  **Disclaimer:** I'm a software guy, which means that when it comes to ECE courses at UofT my interests lie solely in areas 6 (computer software) and 5 (computer hardware and computer networks). 
+  
+  I've gone through almost all the area 6 courses and some of the area 5 courses so I can speak about them at length (along with some others), but if you're interested in more of the electrical and hardware side of things I strongly recommend reaching out to students who have taken those courses (on Discord, LinkedIn, on-campus) and learn from them firsthand about what they're like.
 </Callout>
 
 <hr/>
@@ -84,18 +80,27 @@ Take it in fall for the better lectures, overall better organization, and to hel
 
 ## Probability and Applications (ECE302)
 
-<Callout type="destructive">
-  *This review is currently under construction!*
+### TL;DR
+
+ECE302 course with low workload, great lectures, lenient marking, and really-good-to-know content that makes it a must-have for all engineers, regardless of discipline.
+
+<Callout type="info" classes="border-grey-950/100 bg-grey-100 dark:border-grey-100/100 dark:bg-grey-950">
+  **Fun fact:** One of Prof. Jonathon Rose's biggest regrets from his time as Chair of the ECE department at UofT was not pushing for ECE302 to be a mandatory course for engineering students. And he was' right', probability is ~~super cool~~ important to have a solid foundation in regardless of your discipline.
 </Callout>
 
-<hr/>
+### What you learn
 
+You learn all about probability theory and how to apply it. If you took those Waterloo math contests as a kid in elementary and high school, then you'll do seriously well because you start from the very basics concepts of probability (discrete probability, random variables, etc.) and gradually ramp up to more complex topics (joint, continuous, multi-variate probability distribution functions, etc.).
 
-## ECE361
+This course has one of the best transitions as it ramps up from first principles to the core concepts you learn later in the term. Lectures with Prof. Parham Aarabi (he coordinates the course in the Fall) were an absolute pleasure, I'm a serial lecture skipper and even *I* attended all his lectures by virtue of how engaging they were (the guy even put in a 5 min break through his 1h lectures, how many profs do you know who do that?). In addition, there was a large emphasis on practice (and rightfully so), which is why lectures were full of opportunities to actually solve practice problems involving the concepts we just learned about in that very lecture, it's great.   
 
-<Callout type="destructive">
-  *This review is currently under construction!*
-</Callout>
+### What you do
+
+On the topic of actual work to do, there was hardly any. Your mark on the course rests entirely on the two term tests worth 25% each (both really short) and the 50% final. And that's it, there's no other graded work. There are homework problems from the textbook assigned for practice (and tutorials are just an opportunity for you to get guided solutions to a selection of those assigned problems), but that's it. It's a fantastic course to take in a busy semester for that reason, and it has firmly cemented itself as one of my favorite courses in undergrad.
+
+### When to take it
+
+Course content is largely identical in both fall and winter (there are some slight differences in what content is emphasized in later chapters, but it's largely trivial with respect to what you need to study), so you're fine with taking this whenever. Of course, if you're interested in industries tangetially or directly related to networks (e.g. telecommunications, embedded networks, etc.) then taking this early on will come in handy for interviews
 
 <hr/>
 
@@ -119,25 +124,29 @@ The course is virtually identical in both fall and winter, so you have the freed
 
 <hr/>
 
-## Introduction to Artificial Intelligence (CSC384)
-
-<Callout type="destructive">
-  *This review is currently under construction!*
-</Callout>
-
-<hr/>
-
-
 ## Artificial Intelligence Fundamentals (APS360)
 
+### TL;DR
+
+I've taken this course but I'm getting really tired writing this post (these descriptions are not in chronological order) so I'll keep it short. You learn about high level machine learning concepts here (so the different types of models, hyperparameter tuning, loss and activation functions, etc). 
+
+The midterm and exam used to reuse questions a lot from previous years, but one of the previous profs caught a lot of flack because they reused way too much from a previous midterm (such that it really pissed off some students and caused them to complain) so they're of a totally new format as of last winter or so and as a result they can be quite brutal (the pre-curved midterm average this Fall was around 40%). Thankfully, there is a very healthy curve that brings marks back up to normal values, but this is something you should know (so you don't get lulled into a false sense of security from doing past assessments).
+
+There are some PyTorch labs in the course, done using Jupyter Notebooks running on Google Colab, but they're fairly simple and don't take long (you'll spend a fair few minutes waiting for models to train, but they go by fast because the labs are short). The bulk of your time in this course, however, will be spent on the course project, where you work in a team of 4 people to build, train, and test a machine learning model of your own. And trust me, reader, this thing takes ages. If you're just looking to get by in the course I recommend doing one of the listed project options, but you can also do your own thing with whatever idea your group proposes because having that project on your resume cna b very helpful for landing co-op positions. But yeah, you have to write a proposal and a final project report, and it takes a long time. Your experience in this course lives and dies based on how cooperative your group is, so I would recommend taking it with people you know (you'll probably be fine taking with strangers, but just make sure you're making consistent progress because the rushing the project is nothing something you want to be doing with 3-4 other courses in your schedule). 
+
+<Callout type="info" classes="border-grey-950/100 bg-grey-100 dark:border-grey-100/100 dark:bg-grey-950">
+  APS360 is one of the few upper-year engineering courses that you can take in the summer, and I would highly recommend taking it then because it makes life a lot easier when you have the time to focus singularly on the project without having to deal with your other courses.
+</Callout>
 
 <hr/>
 
 ## Introduction to Machine Learning (ECE421)
 
-<Callout type="destructive">
-  *This review is currently under construction!*
+<Callout type="destructive" icon="lucide:alert-triangle" classes="border-red-950/70 bg-red-100/50 dark:border-red-100/50 dark:bg-red-950/40">
+  I haven't taken this course yet, so I can only speak about what I've heard from others and what I've seen about the course posted online.
 </Callout>
+
+I don't have firsthand experience with ECE421 yet (it's slotted for my winter term of 4th year), but what I've heard from friends and other students is that out of all the courses on AI/ML this is probably the best organized. My limited understanding of what you learn in this course (from what little I've seen in the publicly posted lectures on YouTube) is that you basically learn the math (i.e. algorithms, models, and whatnot) behind high level machine learning concepts you were introduced to in APS360. Profs. Papernot and Khisti sound like great lecturers, the homework and labs are on the lighter side of things, and everyone I've spoken to were very happy with their final marks in the course. Sounds like a good one to take.
 
 <hr/>
 
@@ -184,7 +193,7 @@ One of the most time-consuming courses in undergrad, the course primarily consis
 <Callout type="info" icon="lucide:star" classes="border-yellow-950/100 bg-yellow-100 dark:border-yellow-100/100 dark:bg-yellow-950">
   Here's the project me and my team worked on for ECE419 in 2024: https://github.com/sadmanca/eagerDB
   
-  The whole project thing in ECE419 is actually really cool (despite it being overwhelmingly time-consuming it's nice to have something to show for all of it), I think it's a real bummer Goel got rid of it when he overhauled the course.
+  The whole project thing in ECE419 was actually really cool (despite it being overwhelmingly time-consuming it was nice to have something to show for all of it), I think it's a real bummer Goel got rid of it when he overhauled the course.
 </Callout>
 
 Despite the project taking up practically 80% of your time in the course, it only consisted of 30-40% of your grade, and because it was so time-consuming it meant that you hardly had enough time to study for the midterm and exam (thankfully both were relatively straightforward, despite the midterm being an assessment on Quercus that you had to write in a computer lab, supervised and without any internet access except for access to course resources on Quercus). I can't stress enough how painfully time-consuming this course was, especially at the start of it when you're building the core foundation of your application.
@@ -199,7 +208,7 @@ Another great thing about this course is that it gives you a chance to use what 
 
 ## Software Engineering (ECE444)
 
-<Callout type="warning">
+<Callout type="destructive" icon="lucide:alert-triangle" classes="border-red-950/70 bg-red-100/50 dark:border-red-100/50 dark:bg-red-950/40">
   I haven't taken this course yet, so I can only speak about what I've heard from others and what I've seen about the course posted online.
 </Callout>
 
@@ -213,31 +222,17 @@ In general, what you learn about in ECE444 is more along the lines of product/pr
 
 <hr/>
 
-## TEP444/TEP442
+## Recommended HSS/CS/Natural Science Courses
+
+- TEP444/TEP442
+- TEP343
+- ENT200
+- CIV220/CIV300
 
 <Callout type="destructive">
-  *This review is currently under construction!*
-</Callout>
+  *This section is currently under construction!*
 
-<hr/>
+  I have lots to say about these courses but the Magellan deadline is tonight and I need to get this post out for students to see, so I'll update the descriptions for these non-ECE courses at a later date.
 
-## TEP343
-
-<Callout type="destructive">
-  *This review is currently under construction!*
-</Callout>
-
-<hr/>
-
-## ENT200
-
-<Callout type="destructive">
-  *This review is currently under construction!*
-</Callout>
-<hr/>
-
-## CIV220 (also a bit on CIV300)
-
-<Callout type="destructive">
-  *This review is currently under construction!*
+  Students will have to enroll in non-ECE courses on Acorn over the summer anyways, so there's still plenty of time to think about to take.
 </Callout>
