style: set loading="eager" for important images

--- a/src/content/posts/2020-11-09-why-i-use-trello/index.mdx
+++ b/src/content/posts/2020-11-09-why-i-use-trello/index.mdx
@@ -24,6 +24,7 @@ Trello is a (free!) visual project management tool that is based on the kanban s
 import trellokanban from './1_trello_drag_drop.gif';
 
 <Image
+  loading="eager"
   src={trellokanban}
   layout="constrained"
   alt="A kanban board with cards in Trello"
