--- a/src/content/projects/custarm/custarm.mdx
+++ b/src/content/projects/custarm/custarm.mdx
@@ -2,6 +2,6 @@
 name: 'custARM'
 description: 'custARM is a Verilog-built processor that replicates 50% of the ARMv7-A instruction set. Developed and tested on the Terasic DE1-SoC FPGA.'
 tags: ['Verilog', 'ARMv7-A', 'FPGA', 'DE1-SoC', 'C', 'I/O Devices']
-image: './custARM.png'
+image: './custarm.png'
 link: 'https://sadmanca.github.io/links/arm'
 ---
